Removed CORS middleware and prod changes
