# dto/dto.go
@@ -160,6 +160,7 @@ type GeneralElectionDTO struct {
 	EndingAt       string                  `json:"ending_at"`
 	LockingAt      string                  `json:"locking_at"`
 	Voted          bool                    `json:"voted,omitempty"`
+	Blacklisted    bool                    `json:"blacklisted,omitempty"`
 	GenderSpecific bool                    `json:"gender_specific,omitempty"`
 	Participants   []GeneralParticipantDTO `json:"participants,omitempty"`
 	Candidates     []GeneralCandidateDTO   `json:"candidates,omitempty"`
